--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,24 @@
 
     <groupId>org.prog-coa</groupId>
     <artifactId>PB-JavaUtils</artifactId>
-    <version>1.0.2</version>
+    <version>1.1.0</version>
 
     <dependencies>
         <dependency>
             <groupId>com.1stleg</groupId>
             <artifactId>jnativehook</artifactId>
             <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
