--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.prog-coa</groupId>
     <artifactId>PB-JavaUtils</artifactId>
-    <version>1.1.2</version>
+    <version>1.2.2</version>
 
     <dependencies>
         <dependency>
@@ -24,6 +24,11 @@
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.16</version>
         </dependency>
     </dependencies>
 
